[gd_scene load_steps=5 format=3 uid="uid://wry142taxxkc"]

[ext_resource type="Script" path="res://scripts/Settings.gd" id="1_settings"]
[ext_resource type="Texture2D" path="res://assets/background.svg" id="2_bg"]
[ext_resource type="FontFile" uid="uid://font123" path="res://assets/fonts/PressStart2P-Regular.ttf" id="3_font"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font = ExtResource("3_font")
font_size = 32
font_color = Color(1, 0.84, 0, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_bg")
centered = false

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "AJUSTES"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="VolumeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 12
text = "VOLUMEN"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="MuteCheck" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 12
text = "SILENCIAR"
alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BtnBack" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 12
text = "VOLVER"
